  - add mapped offset support ?
  - unload parts of the tree if it becomes too large
* tree node
  - refactor
  - add mapped offset support ?
  - allow to invalidate sub nodes data range?
* vector
  - refactor
  - write on set value ? what about create ?

Optimizations:
* mapped ranges
  - optimize calculations by adding flag to mapped range ?
    LIBFDATA_MAPPED_RANGE_FLAG_IS_INVALID

20140601
* updated dependencies

20140421
* worked on list

20140206
* changes in vector

20140205
* added libfdata_list_get_element_index_at_offset
* added libfdata_stream_get_segment_at_offset

20140130
* small fix in stream header file

20140126
* list fixed multi file caching issue

20140105
* 2014 update
* updated dependencies

20130929
* worked on tree and tree node
* updated dependencies

20130922
* worked on tree and tree node

20130915
* worked on tree and tree node

20130908
* updated dependencies
* fixed memory leak in error path
* updated msvscpp files
* added libcthreads build support

20130718
* remove unnecessary restriction in library include headers

20130616
* worked on reference

20130501
* worked on vector

20130427
* worked on vector

20130424
* worked on vector

20130422
* worked on vector

20130420
* fix for stream size calculation

20130411
* worked on range list

20130410
* worked on range list

20130409
* worked on range list
* optimized and fixed append list

20130408
* worked on range list
* list initial work on calculate_cache_entry_index callback

20130407
* worked on refactor to combine fdata and mfdata
* worked on range list

20130406
* worked on refactor to combine fdata and mfdata
* worked on range list

20130405
* worked on refactor to combine fdata and mfdata

20130404
* updated dependencies
* fixes for local library Makefiles
* worked on refactor to combine fdata and mfdata
* updated include header and man page

20130403
* worked on refactor to combine fdata and mfdata
* worked on list
* worked on stream

20130402